# rl-lib

./: CMakeLists.txt
data/: get_mnist.py
include/: net.h
src/: main.c  net.c
tests/: initialize_network.c  lsrl.c  mnist.c  xor_network.c
